Enhance HUD command and tmux integration; update skill documentation format

--- a/cli/tmux-marshroom.conf
+++ b/cli/tmux-marshroom.conf
@@ -3,10 +3,11 @@
 #   source-file /path/to/tmux-marshroom.conf
 
 # Show Marshroom HUD in status bar (refreshes every 5 seconds)
-set -g status-right '#(marsh hud) | %H:%M '
+# #{pane_current_path} passes the active pane's directory to marsh
+set -g status-right '#(marsh hud "#{pane_current_path}") | %H:%M '
 set -g status-right-length 80
 set -g status-interval 5
 
 # Keybindings (prefix + key)
-bind-key P run-shell "marsh open-ide"
-bind-key I display-popup -E "marsh status"
+bind-key P run-shell -b "cd '#{pane_current_path}' && marsh open-ide"
+bind-key I display-popup -d "#{pane_current_path}" -E "marsh status"
